--- a/Yukari/src/main/res/layout/row_user.xml
+++ b/Yukari/src/main/res/layout/row_user.xml
@@ -17,24 +17,26 @@
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="\uFF20null"
+            android:text="Name"
             android:id="@+id/user_name"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/user_icon"
             android:layout_marginLeft="8dp"
             android:textSize="18dp"
             android:ellipsize="end"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+        android:layout_marginTop="-2dp" />
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="\uFF20null"
             android:id="@+id/user_sn"
             android:layout_below="@+id/user_name"
             android:layout_alignLeft="@+id/user_name"
             android:layout_marginTop="2dp"
             android:layout_alignParentRight="true"
-            android:ellipsize="end"/>
+            android:ellipsize="end"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
