--- a/Yukari/src/main/res/layout/row_tweet.xml
+++ b/Yukari/src/main/res/layout/row_tweet.xml
@@ -41,10 +41,18 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="2013/01/01 00:00:00 via Yukari for Android"
             android:id="@+id/tweet_timestamp"
-            android:layout_below="@+id/tweet_text"
-            android:layout_alignLeft="@+id/tweet_text"
         android:textColor="#ff8b8b8b"
             android:textSize="11sp"
-        android:layout_marginTop="1dp" />
+        android:layout_below="@+id/tweet_attach"
+        android:layout_alignLeft="@+id/tweet_attach" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tweet_text"
+        android:layout_below="@+id/tweet_text"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="4dp"
+        android:id="@+id/tweet_attach"></LinearLayout>
 
 </RelativeLayout>
