--- a/YukariProject/Yukari/src/main/res/layout/fragment_profile.xml
+++ b/YukariProject/Yukari/src/main/res/layout/fragment_profile.xml
@@ -75,7 +75,7 @@
                     android:layout_height="72dp"
                     android:id="@+id/ivProfileIcon"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_launcher"/>
+                    android:src="@drawable/yukatterload"/>
         </FrameLayout>
 
         <LinearLayout
