--- a/YukariProject/Yukari/src/main/res/layout/row_tweet.xml
+++ b/YukariProject/Yukari/src/main/res/layout/row_tweet.xml
@@ -12,7 +12,7 @@
             android:id="@+id/tweet_icon"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_launcher"/>
+        android:src="@drawable/yukatterload" />
 
     <TextView
             android:layout_width="wrap_content"
