--- a/YukariProject/Yukari/src/main/res/values/styles.xml
+++ b/YukariProject/Yukari/src/main/res/values/styles.xml
@@ -32,6 +32,11 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="AppThemeTranslucentBg" parent="android:Theme.Light.NoTitleBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@drawable/preview_bg</item>
+    </style>
+
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
