--- a/Yukari/src/main/res/values-v11/styles.xml
+++ b/Yukari/src/main/res/values-v11/styles.xml
@@ -28,4 +28,9 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+    <style name="AppThemeTranslucentBg" parent="android:Theme.Holo.Light.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@drawable/preview_bg</item>
+    </style>
+
 </resources>
