--- a/YukariProject/Yukari/src/main/res/layout/view_morse.xml
+++ b/YukariProject/Yukari/src/main/res/layout/view_morse.xml
@@ -19,4 +19,14 @@
             android:inputType="text"
             android:hint="ひらがな か カタカナ で頼んだ"
             android:layout_marginTop="16dp"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="U+FF0Dで出力(ツイやつαと互換)"
+        android:id="@+id/cbMorseOutput"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp" />
 </LinearLayout>
