--- a/Yukari/src/main/res/layout/activity_status.xml
+++ b/Yukari/src/main/res/layout/activity_status.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="#ff7849ba"
+        android:background="@drawable/key_color"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:textColor="#fff" />
