--- a/YukariProject/Yukari/src/main/res/values-v11/styles.xml
+++ b/YukariProject/Yukari/src/main/res/values-v11/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:activityCloseExitAnimation">@anim/activity_tweet_close_exit</item>
     </style>
 
-    <style name="AppThemeNoTitle" parent="android:Theme.Holo.Light.NoActionBar"></style>
+    <style name="AppThemeNoTitle" parent="Theme.AppCompat.Light"></style>
 
     <style name="AppThemeTranslucent" parent="android:Theme.Holo.Light.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
