--- a/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
+++ b/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
@@ -55,7 +55,8 @@
             android:layout_marginRight="2dp"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuProfile">
 
             <ImageView
                 android:layout_width="64dp"
@@ -82,7 +83,8 @@
             android:layout_marginRight="2dp"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuTwilog">
 
             <ImageView
                 android:layout_width="64dp"
@@ -109,7 +111,8 @@
             android:layout_marginRight="2dp"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuFavstar">
 
             <ImageView
                 android:layout_width="64dp"
@@ -135,7 +138,8 @@
             android:layout_weight="1"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuAclog">
 
             <ImageView
                 android:layout_width="64dp"
@@ -171,7 +175,8 @@
             android:layout_marginRight="2dp"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuSleep">
 
             <ImageView
                 android:layout_width="64dp"
@@ -198,7 +203,8 @@
             android:layout_marginRight="2dp"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuBookmark">
 
             <ImageView
                 android:layout_width="64dp"
@@ -225,7 +231,8 @@
             android:layout_marginRight="2dp"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuConfig">
 
             <ImageView
                 android:layout_width="64dp"
@@ -251,7 +258,8 @@
             android:layout_weight="1"
             android:background="@drawable/selector_key_light_background"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:id="@+id/llMenuExit">
 
             <ImageView
                 android:layout_width="64dp"
