--- a/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
+++ b/YukariProject/Yukari/src/main/res/layout/dialog_menu.xml
@@ -179,6 +179,7 @@
             android:id="@+id/llMenuSleep">
 
             <ImageView
+                android:id="@+id/ivMenuSleepIcon"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:padding="6dp"
