--- a/YukariProject/Yukari/src/main/res/layout/activity_test.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_test.xml
@@ -64,13 +64,13 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="1">
 
-                <FrameLayout
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"/>
 
                 <ImageButton
-                    android:layout_width="120dp"
+                    android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:id="@+id/ibSearch"
                     android:src="@drawable/ic_search"
@@ -79,7 +79,7 @@
                     android:background="@drawable/selector_key_background"/>
 
                 <ImageButton
-                    android:layout_width="120dp"
+                    android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:id="@+id/ibMenu"
                     android:src="@drawable/ic_action_overflow"
