--- a/YukariProject/Yukari/src/main/res/layout/row_tweet.xml
+++ b/YukariProject/Yukari/src/main/res/layout/row_tweet.xml
@@ -11,8 +11,7 @@
             android:layout_height="40dp"
             android:id="@+id/tweet_icon"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-        android:src="@drawable/yukatterload" />
+            android:layout_alignParentLeft="true" />
 
     <TextView
             android:layout_width="wrap_content"
