--- a/Yukari/src/main/res/values-v11/themes_yukaritheme.xml
+++ b/Yukari/src/main/res/values-v11/themes_yukaritheme.xml
@@ -5,6 +5,8 @@
 
   <style name="YukariTheme" parent="Theme.AppCompat.Light">
 
+    <item name="android:actionBarStyle">@style/ActionBarYukariTheme</item>
+
     <item name="android:editTextBackground">@drawable/yukaritheme_edit_text_holo_light</item>
 
     <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariTheme</item>
